# Budget-Analysis-App

./: README.md
backend/: app.db  main.py  pyproject.toml
backend/alembic/: env.py
backend/api_testing_budget_analysis_project/: bruno.json  create expense.bru  create income.bru  create transaction.bru  create user.bru  delete income.bru  delete transaction.bru  get categories.bru  get expense categories.bru  get expenses.bru  get income categories.bru  get incomes.bru  get transactions.bru  health check api.bru  health check database.bru  login user PREFLIGHT TEST.bru  login user.bru  logout user.bru  update expense.bru  update income.bru  update transaction.bru  user me.bru
backend/core/: status_codes.py
backend/database/: __init__.py  base.py  seed.py  session.py
backend/dependencies/: __init__.py  auth.py  database.py  list_params.py  optionalUser.py
backend/models/: __init__.py  budget.py  category.py  credential.py  enum.py  enums.py  expense.py  expense_category.py  income.py  income_category.py  mixins.py  role.py  transaction.py  user.py
backend/repositories/: __init__.py  category_repository.py  expense_category_repository.py  expense_repository.py  income_category_repository.py  income_repository.py  transaction_repository.py  user_repository.py
backend/schemas/: __init__.py  category.py  common.py  expense.py  expense_category.py  income.py  income_category.py  transaction.py  user.py
backend/scripts/: check.sh  check_db.py  create_admin.py  run.sh
backend/services/: __init__.py  auth_service.py  category_service.py  expense_service.py  (+5 more)
(+50 files in other folders)
